--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-snowpack-app"
+      content="Medium Clone"
     />
-    <title>Snowpack App</title>
+    <title>Medium Clone</title>
+    <link href="https://fontless-zeta.vercel.app/css?family=Work%20Sans:ital,wght@0,400;0,600;0,700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
